welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:22: error: not found: value setColorBrosse
	setColorBrosse(Color.YELLOW); avance(); dessiner();
        ^FlowerPot:25: error: not found: value setColorBrosse
	setColorBrosse(c); avance(); dessiner(); recule(); recule(); dessiner();
        ^FlowerPot:29: error: not found: value x
	for (i<- 1 to x) {
                      ^FlowerPot:33: error: not found: value x
	for (i<- 1 to x) {
                      ^